--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -9,7 +9,7 @@
         <nav class="nav-menu">
             <a href="/public/pages/menu.html" class="nav-item" data-page="menu">Thực đơn</a>
             <a href="/public/pages/deals.html" class="nav-item" data-page="deals">Ưu đãi</a>
-            <a href="/public/pages/reserve.html" class="nav-item" data-page="reserve">Đặt bàn</a>
+            <a href="/public/pages/stores.html" class="nav-item" data-page="stores">Đặt bàn</a>
             <a href="/public/pages/about.html" class="nav-item" data-page="about">Về SandJ</a>
         </nav>
         <div class="auth-buttons">
