--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -29,7 +29,7 @@
                     <ul class="footer-links">
                         <li><a href="/public/pages/menu.html">Thực đơn</a></li>
                         <li><a href="/public/pages/deals.html">Ưu đãi</a></li>
-                        <li><a href="/public/pages/reserve.html">Đặt bàn</a></li>
+                        <li><a href="/public/pages/reservation/reserve.html">Đặt bàn</a></li>
                     </ul>
                 </div>
                 <div class="footer-section company-section">
